@@ -1,3 +1,6 @@
+14 March 2013: Wouter
+	- Fix memory statistics in nsd_munin_.
+
 8 March 2013: Wouter
 	- nsd-mem tool initial commit.
 
